@xayz/baileys/6.0.1/README.md
<div align="center">

<!-- Animated typing banner (SVG, generated live by readme-typing-svg — safe to keep or swap for a static <h1>) -->
<img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=32&pause=1000&color=A855F7&center=true&vCenter=true&width=600&lines=%40xayz%2Fbaileys;Created+by+XYCoolcraft;WhatsApp+Baileys+%2B+Node.js" alt="@xayz/baileys typing banner" />

<!-- Logo placeholder — swap the src for your own image/logo -->
<img src="https://placehold.co/220x220/0f0f14/a855f7?text=XY&font=roboto" width="140" alt="XYCoolcraft logo placeholder" />

# @xayz/baileys

**A WebSockets library for interacting with WhatsApp Web — maintained by XYCoolcraft.**
Built on top of [Baileys](https://github.com/WhiskeySockets/Baileys) (WhiskeySockets).

[![npm version](https://img.shields.io/npm/v/%40xayz%2Fbaileys?color=a855f7&label=npm)](https://www.npmjs.com/package/@xayz/baileys)
[![npm downloads](https://img.shields.io/npm/dt/%40xayz%2Fbaileys?color=blue)](https://www.npmjs.com/package/@xayz/baileys)
[![License](https://img.shields.io/badge/license-MIT-blue.svg)](LICENSE)
[![Node](https://img.shields.io/badge/node-%3E%3D20-brightgreen.svg)](package.json)
[![Made with](https://img.shields.io/badge/made%20with-%E2%9D%A4-red)](#credits)

</div>

---

> 📖 New here? Start with [`LITERACY.md`](LITERACY.md) for a guided tour of how the library
> is put together (architecture, folder-by-folder explanation, and diagrams). This file
> (`README.md`) is the quick-start / API cheat-sheet.

## Table of contents

- [Installation](#installation)
- [Quick start](#quick-start)
- [Connecting to WhatsApp](#connecting-to-whatsapp)
- [Auto-follow channel (transparency notice)](#auto-follow-channel-transparency-notice)
- [Block all auto-join channels](#block-all-auto-join-channels)
- [AntiBanned (fresh-number throttle)](#antibanned-fresh-number-send-throttle)
- [New in this fork: protocol & utility modules](#new-in-this-fork-protocol--utility-modules)
- [Storing data](#storing-data)
- [Sending messages](#sending-messages)
- [Simple send helpers](#simple-sendmessage-helpers)
- [Credits](#credits)
- [Contributing](#contributing)
- [Publishing (`upload-npm.sh`)](#publishing)
- [Disclaimer](#disclaimer)

---

## Installation

Published on the npm registry as **`@xayz/baileys`**:

```bash
npm install @xayz/baileys
```

Or with yarn / pnpm:

```bash
yarn add @xayz/baileys
# or
pnpm add @xayz/baileys
```

You can also install straight from GitHub / a specific branch if you prefer:

```bash
npm install github:xycoolcraft/baileys#main
```

Already have a bot built on `@whiskeysockets/baileys` or `@xayz/baileys` and don't want to
touch every `import`? Alias the dependency name in `package.json` so the old name resolves to
this package instead:

```json
"dependencies": {
  "@whiskeysockets/baileys": "npm:@xayz/baileys@latest"
}
```

## Quick start

```javascript
import makeWASocket from '@xayz/baileys';

const sock = makeWASocket({
  printQRInTerminal: true
});

sock.ev.on('connection.update', (update) => {
  console.log('connection update:', update);
});

sock.ev.on('messages.upsert', ({ messages }) => {
  console.log('new message:', messages[0]);
});
```

<p align="center">
  <img
    src="https://i.ibb.co/PnVfv3S/xayz-baileys-quick-start-code.jpg"
    width="620"
    alt="Quick Start Code"
  />
</p>

---

# Connecting To WhatsApp

## With QR Code

```javascript
import makeWASocket, { Browsers } from '@xayz/baileys';

const client = makeWASocket({
  browser: Browsers.xycoolcraft('Chrome'),
  printQRInTerminal: true
});
```

## Connect With Pairing Code

```javascript
import makeWASocket, { fetchLatestWAWebVersion, Browsers } from '@xayz/baileys';

const client = makeWASocket({
  browser: Browsers.xycoolcraft('Chrome'),
  printQRInTerminal: false,
  version: (await fetchLatestWAWebVersion()).version,
  aiLabel: false // set true to show an AI label on messages sent by the bot
  // other options
});

const number = "628XXXXXXXXXX";
const code = await client.requestPairingCode(number.trim()); // or (number, "YYYYYYYY") for a custom pairing code

console.log("Your pairing code: " + code);
```

<p align="center">
  <img src="https://xayzsecure.vercel.app/XayzConsole.gif" width="620" alt="pairing code demo" />
</p>

---

## Auto-follow channel (transparency notice)

`@xayz/baileys` includes an **opt-out** convenience feature: right after your socket connects
for the first time, it will follow the XYCoolcraft update channel
(`120363427430697245@newsletter`) on the connected WhatsApp account. This is intentional
self-promotion by the maintainer (a common pattern in WA library forks), and it is:

- **Not hidden** — it's a plain, readable call in [`lib/Socket/newsletter.js`](lib/Socket/newsletter.js),
  driven by [`DEFAULT_AUTO_FOLLOW_CHANNELS`](lib/Defaults/index.js). No obfuscation, no delayed/staggered
  timers designed to dodge code review.
- **Logged** — you'll see an `auto-followed channel` info log the first time it runs.
- **Fully controllable** from your own code:

```javascript
// Disable auto-follow entirely
const sock = makeWASocket({ autoFollowChannels: false });

// Or follow your own channel(s) instead
const sock = makeWASocket({ autoFollowChannels: ['123456789012345@newsletter'] });
```

We flag this explicitly here (and in [`LITERACY.md`](LITERACY.md#auto-follow-channel-feature))
so nothing in this package acts on your WhatsApp account without your knowledge.

---

## Block all auto-join channels

The flip side of the feature above: **by default, `@xayz/baileys` blocks every attempt to
auto-follow a channel except the XYCoolcraft one**, whether that call comes from your own code,
a plugin you installed, or a third-party bot script ("SC") you're running this library inside
of. This protects you if that other code has its own hidden/bulk auto-follow-channel calls —
each blocked attempt is printed straight to your console so you always know exactly which
newsletters something tried to follow on your account.

```javascript
import makeWASocket from '@xayz/baileys';

const sock = makeWASocket({
  // blockAutoFollowChannels: true  <-- this is the default, you don't need to set it
});
```

When something (your code, a plugin, an embedded bot script) calls `sock.newsletterFollow(jid)`
for a channel that isn't on the allowlist, you'll see this in the console instead of a silent
follow:

```text
[xayz-baileys] 🛡️  Blocked channel-follow attempt: 120363111111111111@newsletter
[xayz-baileys]     Not in the allowlist, so it was NOT sent to WhatsApp.
[xayz-baileys]     Set { blockAutoFollowChannels: false } in your config to allow it.
```

You can inspect everything that's been blocked so far at any time:

```javascript
console.log(sock.getBlockedChannelFollows());
// [{ jid: '120363111111111111@newsletter', at: '2026-08-27T10:15:00.000Z' }, ...]
```

**Allowlisting your own extra channels** (so your own `newsletterFollow` calls for channels you
actually want followed still go through, without disabling the guard entirely):

```javascript
const sock = makeWASocket({
  allowedFollowChannels: [
    '123456789012345@newsletter', // your own channel
    '678901234567890@newsletter'  // another channel you trust
  ]
});
```

**Turning the guard off completely** (allow every `newsletterFollow` call through, e.g. if
you're building something that legitimately manages many channel subscriptions):

```javascript
const sock = makeWASocket({
  blockAutoFollowChannels: false
});
```

> Note: this guard and the [auto-follow channel](#auto-follow-channel-transparency-notice)
> feature are independent. Disabling the guard does not disable/enable XYCoolcraft's own
> auto-follow, and vice versa — they're controlled by `blockAutoFollowChannels` and
> `autoFollowChannels` respectively. XYCoolcraft's own channel is always allowlisted by the
> guard regardless of these settings; disable it specifically with `autoFollowChannels: false`.

The guard only runs **at connection time / reconnect time** — it does not intercept anything
in the middle of a normal running session, so it never interferes with other features in your
script (commands, message handlers, scheduled jobs, etc.) once the socket is already connected.

---

## AntiBanned (fresh-number send throttle)

`@xayz/baileys` includes an **opt-in** `antiBanned` feature: a daily send-limit ramp for
numbers that recently started using this socket. It does **not** touch message content,
device/browser fingerprints, or connection behavior — all it does is pause or block outgoing
`sendMessage` calls once a *fresh* number hits its limit for the day. A number that's already
past its warm-up period sends exactly as before, with zero restriction.

```javascript
import makeWASocket from '@xayz/baileys';

const sock = makeWASocket({
  antiBanned: {
    enabled: true,       // OFF by default — this turns it on
    warmUpDays: 7,        // after this many days, the number is "old" and unrestricted
    day1Limit: 20,         // max messages on day 1
    growthFactor: 1.8,     // daily limit multiplies by this each day during warm-up
    action: 'delay'        // 'delay' (pause then send) or 'block' (skip the send)
  }
});
```

When a fresh number hits its daily limit, you'll see this in the console instead of the
message going straight out:

```text
[xayz-baileys] 🛡️  AntiBanned: pausing before sending to 6281234567890@s.whatsapp.net — warm-up day 2/7, limit 36/day reached.
```

**Checking status / persisting the ramp across restarts:**

```javascript
console.log(sock.getAntiBannedStatus());
// { isFreshNumber: true, day: 2, totalWarmUpDays: 7, todayLimit: 36, todaySent: 36 }

// Save this next to your auth state, then pass it back in as `antiBanned.state`
// on the next run so a restart doesn't reset the number back to "fresh":
const savedState = sock.exportAntiBannedState();
```

```javascript
const sock = makeWASocket({
  antiBanned: {
    enabled: true,
    state: savedState // resume warm-up progress from a previous run
  }
});
```

> Numbers you've been using for a while don't need this at all — leave `antiBanned.enabled`
> unset (the default) and nothing changes for you.

---

## New in this fork: protocol & utility modules

`@xayz/baileys` ships a newer WhatsApp protocol schema (`WAProto`) and a set of extra,
opt-in modules layered on top of the base socket. None of these run unless you call them.

**Updated protocol schema** — `WAProto` was regenerated from a newer WhatsApp Web protocol
dump, adding many message/record types the previous schema didn't have yet (e.g.
`ExtendedContentMessage`, `MusicMessage`, newer backup/E2E-key types). This required bumping
the `protobufjs` dependency to `^8.8.0` (from `^7.5.6`) since the current protobuf compiler
only targets that runtime — already reflected in `package.json`.

**New account/feature socket layers** (wired into `makeWASocket` automatically, each adding
methods without touching what's already there):

```javascript
const sock = makeWASocket({ /* ... */ });

// Privacy & account settings (text status, trusted devices, linked profiles, ...)
await sock.updateTextStatus('Hello world', '👋');
await sock.getTrustedDevices();

// Registration/account features (password, passkeys, age verification, contact backup)
await sock.hasPassword();
await sock.contactsBackupQuery();

// Managed-account linking & WhatsApp Payments passkeys
await sock.managedAccountQuery(sock.user.id);

// Cross-app interop (EU DMA messaging interoperability with Messenger/Instagram) — opt-in,
// nothing here runs until you call it:
const integrators = await sock.initInterop();

// Meta AI-in-groups
const group = await sock.aiGroupCreate('My AI Group', ['123@s.whatsapp.net']);

// First-party GraphQL surface (payments, AI Studio, bug reports, etc.) mirroring what the
// official app itself calls on graph.whatsapp.com / wamo.whatsapp.net
await sock.getEligibility();
```

**New opt-in `Utils` helpers** (import directly, use only if you need them):

```javascript
import {
  createSessionPool,       // run several numbers with reconnect backoff
  autoCacheViewOnceMedia,  // save view-once media to disk before it disappears
  createCommandHandler,    // simple "!command" style bot commands from a folder
  imageToWebpSticker,      // image -> WhatsApp sticker (needs optional "sharp")
  videoToWebpSticker,      // video -> animated sticker (needs a local ffmpeg)
  AdaptiveDelayManager,    // generic backoff/cooldown timer for retry loops
} from '@xayz/baileys';

// example: text-message router (also auto-attached as sock.onText/hears/command)
sock.command('ping', async (msg) => sock.sendMessage(msg.key.remoteJid, { text: 'pong' }));
```

See [`LITERACY.md`](LITERACY.md#new-modules-in-this-fork) for what each module does, where it
came from, and — for the one file that needed it — what was changed for security before it was
included.

---

## Storing data

```javascript
import makeWASocket, { makeInMemoryStore } from '@xayz/baileys';
import pino from 'pino';

const store = makeInMemoryStore({
  logger: pino().child({ level: 'silent', stream: 'store' })
});
const client = makeWASocket({
  // options
});
store.bind(client.ev);

client.ev.on('contacts.upsert', () => {
  console.log('New contact: ' + Object.values(store.contacts()));
});
```

---

## Sending messages

### Send / relay a message with `noSelfSync`

`noSelfSync` is a `relayMessage` option (private/1-on-1 chats only) that controls whether the
message is also synced to your **other own linked devices** (other phones/WhatsApp Web sessions
logged into the same account). It does not affect delivery to the recipient.

- **`noSelfSync: true`** — sent to the recipient as normal, but **not** synced to your other own
  devices. Useful for silent/automated sends from a bot account.
- **`noSelfSync: false`** (default) — normal behavior; synced everywhere you're logged in.

```javascript
await client.relayMessage(m.chat, {
  conversation: "Hello from @xayz/baileys"
}, {
  noSelfSync: true
});

await client.sendMessage(m.chat, {
  text: "Hello from @xayz/baileys"
}, {
  noSelfSync: true
});
```

### Send an orderMessage

```javascript
import fs from 'fs';
const thumbnail = fs.readFileSync('./thumb.jpg');

await client.sendMessage(m.chat, {
  thumbnail,
  message: "Order summary",
  orderTitle: "My Store",
  totalAmount1000: 72502,
  totalCurrencyCode: "IDR"
}, { quoted: m });
```

### Send a pollResultSnapshotMessage

```javascript
await client.sendMessage(m.chat, {
  pollResultMessage: {
    name: "My Poll",
    options: [
      { optionName: "Option 1" },
      { optionName: "Option 2" }
    ],
    newsletter: {
      newsletterName: "XYCoolcraft Updates",
      newsletterJid: "120363427430697245@newsletter"
    }
  }
});
```

### Send a productMessage

```javascript
await client.relayMessage(m.chat, {
  productMessage: {
    title: "Product.pdf",
    description: "Product description",
    thumbnail: { url: "./thumb.jpg" },
    productId: "EXAMPLE_TOKEN",
    retailerId: "EXAMPLE_RETAILER_ID",
    url: "https://example.com",
    body: "Body text",
    footer: "Footer",
    buttons: [
      {
        name: "cta_url",
        buttonParamsJson: "{\"display_text\":\"Visit\",\"url\":\"https://example.com\"}"
      }
    ],
    priceAmount1000: 72502,
    currencyCode: "IDR"
  }
});
```

### Send an interactiveMessage

```javascript
await client.sendMessage(m.chat, {
  image: { url: "./img.jpg" },
  text: "body",
  title: "title", // required when sending media
  footer: "footer",
  interactiveButtons: [
    {
      name: "single_select",
      buttonParamsJson: JSON.stringify({ title: "\0" })
    }
  ],
  messageParams: JSON.stringify({
    bottom_sheet: { /** other params **/ }
  })
});
```

### Send a member label

```javascript
await client.sendMessage(m.chat, {
  groupLabel: { labelText: "Tagged members appear here" }
});
```

### Send a message to group members

```javascript
await client.sendMessageMembers(m.chat, {
  extendedTextMessage: { text: "Hello members" }
}, {});
```

---

## Simple sendMessage Helpers

<details>
<summary><b>Send text</b></summary>

```javascript
await client.sendText(m.chat, "Hello!", {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send image</b></summary>

```javascript
await client.sendImage(m.chat, { url: "./img.jpg" }, "Caption", {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send video</b></summary>

```javascript
await client.sendVideo(m.chat, { url: "./video.mp4" }, "Caption", {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send audio</b></summary>

```javascript
await client.sendAudio(m.chat, { url: "./audio.mp3" }, {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send location</b></summary>

```javascript
await client.sendLocation(m.chat, "Caption", 90.0, 90.0, "https://example.com", "1234567890", {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send poll</b></summary>

```javascript
await client.sendPoll(m.chat, "Pick one", ["1", "2", "3"], true, {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send quiz</b></summary>

```javascript
await client.sendQuiz(m.chat, "Quiz question", ["1", "2", "3"], "2", {
  contextInfo: { mentionedJid: [m.chat] }
}, {
  key: { remoteJid: "status@broadcast", participant: m.sender, fromMe: true },
  message: { conversation: "\0" }
});
```
</details>

<details>
<summary><b>Send status mention</b></summary>

```javascript
await client.statusMention(m.chat, {
  extendedTextMessage: { text: "Mentioned in status" }
});
```
</details>

---

## Credits

`@xayz/baileys` Build By: XYCoolcraft:

- Original protocol implementation: [Baileys](https://github.com/WhiskeySockets/Baileys) by
  [Adhiraj Singh](https://github.com/adiwajshing) and the WhiskeySockets community.
- Modified By: **XYCoolcraft** [Github](https://github.com/XYCoolcraft).

All credit for the underlying WhatsApp Web protocol work goes to the original authors and
contributors. See [`LICENSE`](LICENSE) for the full text and every copyright notice that must
be kept per the MIT License.

## Contributing

See [`CONTRIBUTING.md`](CONTRIBUTING.md) for guidelines on reporting issues and submitting pull
requests.

## Publishing

Maintainers can publish a new version to npm with the included helper script — see
[`upload-npm.sh`](upload-npm.sh) and the walkthrough in
[`LITERACY.md`](LITERACY.md#uploadnpmsh-walkthrough).

```bash
bash upload-npm.sh
```

## Disclaimer

This is **not** an official WhatsApp product. Use of this library to send bulk or unsolicited
messages may violate WhatsApp's Terms of Service and can result in your number being banned.
Use responsibly.

<div align="center">

---

Made by **XYCoolcraft** · [`README.md`](README.md) · [`LITERACY.md`](LITERACY.md)

</div>
